test/error/OpAssignLiteral.fu
public static class Test
{
	public static bool Run()
	{
		2 = 4; //ERROR: Cannot modify this //ERROR: Cannot convert '4' to '2'
		return true;
	}
}
